@@ -5,20 +5,18 @@ AUX 0_pre20110522-make-var-instead-of-cmd.patch 3756 RMD160 433b165268fdd4a9493d
 AUX 0_pre20120421-make-var-instead-of-cmd.patch 3756 RMD160 433b165268fdd4a9493d1e42e4c23b08f85aac35 SHA1 6631aca53d6b90c5defb48a116ff7a7fae3855bb SHA256 ef7f66e87c6b3b145ad9e5c0a0023b3d4331d0507aca6e69df95a380a421d2eb
 AUX mjpg-streamer.confd 347 RMD160 50b97048e9c5e27e336d4925f179f0cc0b2a974c SHA1 e962d439bfebdff487c7d980088481f431744304 SHA256 37019a36c29ad350ac3348c1665c631d0b4ab5efacc4583662fcbf7d4b920db1
 AUX mjpg-streamer.initd 1369 RMD160 210ef19f88b9b2272c4b529dc048d6c6130d63f7 SHA1 3f6f84458b909a8652a1a14274c8c5a8eab6b6f1 SHA256 460d688cb1a25e5fa9d85fe1453a2ad0b4ad11c827125465a057d995415a171a
-DIST mjpg-streamer-0_pre20110522.tar.bz2 473378 RMD160 78e1d3f526f2037e7ac543e3f2511bde86b509f6 SHA1 7e2b5d2b66ae9afcb8fcd85c6e3c84743bc13639 SHA256 6a3aedb57f4779a53e80a7ac617924ebadd52a2098e088ef4b91dc91ba5a24d6
 DIST mjpg-streamer-0_pre20120421.tar.bz2 471104 RMD160 1f785d9076acc305baaec2fe69575a21e35a6a88 SHA1 c2aa63e9b70c18b69708df3697a4e17f84ce1d88 SHA256 cba3027eece48735e104522adf4682169431e0879555c1d22395b4669189aab8
-EBUILD mjpg-streamer-0_pre20110522.ebuild 1817 RMD160 6f6d74f83d7bd0323b569c0c2bf362adad0a0c6e SHA1 63e8c26dc13338d772fab5d8035eed254a7354c0 SHA256 bbbf094ce86fc29dfcedf1a9a217f00640ef27826caabf54d80a831e2fc38ac2
 EBUILD mjpg-streamer-0_pre20120421.ebuild 1841 RMD160 0ef0773ab1770c513a838ca350209e5d480b7b67 SHA1 98c5792be16bf7ba2d8239731c17d125435bc5c2 SHA256 f7084622fcb1826952af07707c1a9077565115e7a4b1425eb851341818921b77
-MISC ChangeLog 1272 RMD160 11ba68cba01540d7b333d3f2c1e302bf4b5ec647 SHA1 958200a9b9a96a11f3aae7e2e93f8f907b040440 SHA256 e025cc6727d33ed168386ca7f961db44c2d5fbc25ad33273c56d56a6b0ee92b8
+MISC ChangeLog 1390 RMD160 7700ecf1144091e5b257bfaa47feb144e3ce195f SHA1 4700c4600f63596d1f76acc4eac6415a161cf4d9 SHA256 6bb4f6daf235bbfa4305a85d064012ae2b5b58ce54e6c8838fa341da397e5a6c
 MISC metadata.xml 1823 RMD160 4dcdc175ee80e22547ef024d3aa1853f38dd2819 SHA1 1c9d4b8f56c4ff9926889b0999236d2f0a2a2140 SHA256 0f03a0a6a77e3f643e95c5c578cc031b91825088f2de408d8e10d78ef43823c7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJP7AhVAAoJEPATRTHh2/q1RhYH/22DgzXWTT+XXpl06ShduT2p
-guHZC1Ziv5BZpYyKhtyNiJXCXDRYbCKnh7Ghi1oH08KTRbBe8dKqoptXWfqAjDtE
-5zl8nhjX6Gf7yLXuxfqJcuh99gZqWoDmuYjwyX2YmH5t/LrMTw+8d44H6I1hMRMo
-GJS+eDfUq8IC18Qh7mngZZg2CXMtngwD/CMJH7qVabAGNCyu149O6hao1IMUnrOz
-0TQlvPEA+E81ckcmnrpAcdrIby4Au4gGMKt1BubDpAapGdB+tU0jyplxieqRtaFO
-mfwYkIYaQXTZjOiKbst3Dp0iwB53KHxJx467hFb+mVjrXxheIYswrQGWP/FEt/Y=
-=RTk/
+iQEcBAEBAgAGBQJP7AlWAAoJEPATRTHh2/q1sFQH/2PAwnHxWOhU2ClALLC2JNzL
+oZa9jD5z61Lun8QBkzMUYu20SWm1QTYpzAFL+1pwH1kUlARlE2M5eBMV/USLdX6Q
+Q954Ebfx2zvKrOU4pFz7ovW9G3wJOp3UlDNFMo71zYWczsM1a5dQHsmrVTxvWhMb
+fm+4YcynMpnMCA1c8gpIGxXklzC5vtGdGeGw9qlH/AtSlg5BEXiEJPw3gMvZLkjP
+FXc4lDZlJUJxCGoHYfX4IzuXq1bBF16ItMJIjhBqU9HI5w4BPqX2+P9ParlilYJd
++haD1m4b3nFajfHzyct8qm7tXCK1c0NOQ43gCertkNEXhT88LS67MZQlY5+Nm6A=
+=Z25Q
 -----END PGP SIGNATURE-----
